source/style.css
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');

:root {
	--main-color: #f44c7f;
	--side-color: white;
	--none-color: #939eae;
	--back-color: #333a45;
	--right-color: white;
	--wrong-color: #da3333;
	--font: 'Ubuntu Mono', monospace;
}

* {
	margin: 0px;
	padding: 0px;
}

html, body {
	width: 100%;
	height: 100%;
	background-color: var(--back-color);
}

body {
	overflow: hidden;
	display: flex;
	flex-direction: column;
}

.popupBox {
	visibility: hidden;
	display: flex;
	justify-content: center;
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.6);
	z-index: 1000;
	transition: 200ms visibility ease, 200ms opacity ease;
}

.popup {
	position: relative;
	display: flex;
	flex-direction: column;
	overflow: hidden;
	max-width: 600px;
	max-height: 70vh;
	min-height: 54px;
	width: 600px;
	height: fit-content;
	margin: 15px;
	margin-top: 20vh;
	background-color: var(--back-color);
	border-radius: 6px;
}

.menu {
	overflow-y: auto;
	padding-bottom: 10px;
	display: flex;
	flex-direction: column;
}

.menuOption {
	cursor: pointer;
	display: flex;
	align-items: center;
}

.focus .optionIcon {
	color: var(--right-color);
}

.focus .optionText {
	color: var(--right-color);
}

.menuElement:hover .optionIcon {
	color: var(--right-color);
}

.menuElement:hover .optionText {
	color: var(--right-color);
}

.optionIcon {
	margin: 5px 16px 5px 16px;
	font-size: 18px;
	font-weight: bold;
	color: var(--none-color);
	transition: 200ms color ease;
}

.optionText {
	text-transform: capitalize;
	color: var(--none-color);
	font-family: var(--font);
	font-size: 16px;
	transition: 200ms color ease;
}

.search {
	top: auto;
	left: auto;
	background-color: var(--back-color);
	border-radius: 6px;
	position: fixed;
	display: flex;
	align-items: center;
	padding: 16px;
}

.searchIcon {
	font-size: 22px;
	font-weight: bold;
	color: var(--none-color);
}

.searchInput {
	margin-left: 16px;
	background-color: transparent;
	outline: none;
	border: none;
	color: var(--right-color);
	font-family: var(--font);
	font-size: 20px;
}

.searchInput::placeholder {
	color: var(--none-color);
}

.searchFiller {
	min-height: 22px;
	height: 22px;
	padding: 16px;
}

header {
	position: fixed;
	width: 100%;
	display: flex;
	opacity: 1;
	justify-content: center;
	align-items: center;
	transition: 200ms opacity ease, 400ms visibility ease;
}

.logo {
	width: 90%;
	max-width: 1000px;
	display: flex;
	margin: 40px 40px 0px 40px;
}

.icon {
	margin: 0px 10px 0px 10px;
	color: var(--main-color);	
	font-size: 32px;
	transition: 400ms color ease;
}

.heading {
	color: var(--side-color); 
	font-size: 32px;
	font-weight: bold;
	font-family: var(--font);
	transition: 400ms color ease;
}

.box {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.info {
	width: 90%;
	display: flex;
	justify-content: space-between;
	margin: 0px 40px 10px 40px;
}

.language {
	text-transform: capitalize;
	justify-self: left;
	display: flex;
	align-items: center;
	transition: 400ms opacity ease, 400ms visibility ease;
}

.language:hover {
	cursor: pointer;
}

.language:hover .languageIcon {
	color: var(--right-color);
}

.language:hover .languageText {
	color: var(--right-color);
}

.languageIcon {
	font-size: 22px;
	color: var(--none-color);
	transition: 200ms color ease;
}

.languageText {
	margin-left: 5px;
	color: var(--none-color);
	font-size: 22px;
	font-family: var(--font);
	transition: 200ms color ease;
}

.counter {
	position: absolute;
	opacity: 0;
	color: var(--main-color);
	font-size: 26px;
	font-family: var(--font);
	height: 28px;
	transition: 400ms opacity ease, 400ms visibility ease;
}

.container {
	max-width: 1000px;
	width: 90%;
	display: flex;
}

.view {
	margin: 0px 40px 0px 40px;
	position: relative;
	scroll-behavior: smooth;
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	overflow: hidden;
	max-height: 80vh;
	align-content: baseline;
}

.cursor {
	position: absolute;
	width: 3px;
	height: 28px;
	background-color: var(--main-color);
	border-radius: 3px;
	transition: 100ms left linear, 100ms top linear;
	animation-name: blink;
	animation-duration: 800ms;
	animation-iteration-count: infinite;
	animation-timing-function: ease;
	animation-fill-mode: forwards;
}

.word {
	height: 28px;
	display: flex;
}

.character {
	height: 28px;
	width: 14px;
	color: var(--none-color); 
	font-size: 28px;
	font-family: var(--font);
}

.right {
	color: var(--right-color); 
}

.wrong {
	color: var(--wrong-color);
}

@media only screen and (max-height: 315px) {
	header {
		visibility: hidden;
		opacity: 0;
	}

	.view {
		max-height: 70vh;
	}
}

@media only screen and (max-height: 500px) {
	.view {
		max-height: 40vh !important;
	}
}

@media only screen and (max-height: 700px) {
	.view {
		max-height: 50vh;
	}
}


@keyframes blink {
  0% { opacity: 1 }
  50% { opacity: 0 }
	100% { opacity: 1 }
}

